[base, collect] Updates

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,16 @@
 <div class="component-container">
-    <h2 class="title">project coswara</h2>
-    <p>Project Coswara aims at designing point-of-care diagnosis for respiratory infections.
-        The focus is on making the diagnosis in seconds, without having to walk to the clinic, and inexpensive.
-        Towards this, we propose using human breath and voice.
-        Respiratory infection affects lungs, and this impacts air flow through the vocal tract while we speak.
-        The result is a temporary change in the voice quality.
-        We all have noticed this in our own voice or that of our dear ones, especially in the flu season.</p>
-
-    <p>We are attempting diagnosis of COVID-19 through voice samples.
-        This is challenging and we are not sure if we will succeed.
-        However, we need to try out as there is some hope from scientific studies.
-        We need your support for this, and specifically, we need your 7 minutes.
+    <h2 class="title">Project Coswara</h2>
+    <p>This project, named ''Coswara'', attempts to provide a simple tool for diagnostics of Covid-19 based on respiratory, cough and speech sounds.
+        As most of the major symptoms of the disease include respiratory problems, the proposed project aims to detect and quantify the biomarkers of the disease in the acoustics of these sounds.
+        The project requires the participants to provide a recording of breathing sounds, cough sounds, sustained phonation of vowel sounds and a counting exercise.
+        The entire response requires about 5 minutes of recording time.
+        Along with these recordings, the tool also records patient's health status (without any personally identifiable information) as well as age, gender and location.
+        The dataset collected will be released for researchers across the world to develop diagnostic tools using signal processing and machine learning methods.
+    </p>
+    <p>
+        The project is in the  data collection stage at this point and requires an experimental validation before the full approval of the diagnostic tool.
+        Given the highly simplistic and cost effective nature of the tool, we hypothesize that, even a partial success for the tool would enable a massive deployment as a first line of diagnostic tool for the pandemic.
+        The project is not aimed to replace the chemical testing or the imaging methods but to merely supplement those with a cost effective, fast and simple technique.
     </p>
 
     <div class="home-footer" fxLayout="row wrap" fxLayout.xs="column">
