--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="tab-content-spacer" fxFlex="100"></div>
                 <h5 class="tab-sub-title" fxFlex="100">Health Conditions</h5>
-                <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
+                <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="100">
                     <div class="tab-check-box" *ngFor="let cb of optionList.healthConditionList.resp" fxFlex="24" fxFlex.xs="100">
                         <mat-checkbox [formControl]="formControls[cb.id]">{{cb.name}}</mat-checkbox>
                     </div>
