--- a/projects/collect/src/app/record/record.component.html
+++ b/projects/collect/src/app/record/record.component.html
@@ -13,6 +13,18 @@
             <mat-step *ngFor="let stageId of recordStages" [stepControl]="formControls[stageId]">
                 <ng-template matStepLabel>{{titleDict[stageId]}}</ng-template>
                 <div *ngIf="instructionDict[stageId] && recordState >= 0 && recordState < 5" class="inst">{{instructionDict[stageId]}}</div>
+                <div *ngIf="recordState == -1" class="upload" fxLayout="row wrap" fxLayoutAlign="start center">
+                    <mat-progress-spinner [diameter]="30" mode="indeterminate"></mat-progress-spinner>
+                    <div class="content">
+                        Initialising! Please wait...
+                    </div>
+                </div>
+                <div *ngIf="recordState == 5" class="upload" fxLayout="row wrap" fxLayoutAlign="start center">
+                    <mat-progress-spinner [diameter]="30" [value]="uploadProgress"></mat-progress-spinner>
+                    <div class="content">
+                        Uploading! Please wait...
+                    </div>
+                </div>
                 <div *ngIf="stageId != 'done' && recordState != -1" class="step-buttons" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="start center" fxLayoutAlign.xs="center start">
                     <div *ngIf="recordState < 2" class="button" (click)="recordState = 2; stopSamplePlaying(); startRecording();">START RECORDING</div>
                     <div *ngIf="recordState == 2" class="button button-dark" (click)="recordState = 3; stopRecording();">STOP RECORDING</div>
@@ -22,18 +34,7 @@
                     <div *ngIf="recordState == 4" class="button button-dark" (click)="stopPlaying(); recordState = 3;">STOP</div>
                     <div *ngIf="recordState > 2 && recordState < 4" class="button" (click)="recordState = 5; uploadAudio(stageId);">UPLOAD</div>
                     <div *ngIf="recordState > 2 && recordState < 4" class="button" (click)="initRecord();">RECORD AGAIN</div>
-                </div>
-                <div *ngIf="recordState == -1" class="upload" fxLayout="row wrap" fxLayoutAlign="start center">
-                    <mat-progress-spinner [diameter]="30" mode="indeterminate"></mat-progress-spinner>
-                    <div class="content">
-                        Initialising! Please wait...
-                    </div>
-                </div>
-                <div *ngIf="recordState == 5" class="upload" fxLayout="row wrap" fxLayoutAlign="start center">
-                    <mat-progress-spinner [diameter]="30" mode="indeterminate"></mat-progress-spinner>
-                    <div class="content">
-                        Uploading! Please wait...
-                    </div>
+                    <div *ngIf="recordState == 5" class="button" (click)="cancelUpload(); recordState=3;">CANCEL</div>
                 </div>
             </mat-step>
         </mat-vertical-stepper>
