--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -12,7 +12,7 @@
             The participation in this study is purely voluntary and the details collected will not contain any personally identifiable information.
             </p>
             <p>The entire recording and data collection should take about 5 minutes only.
-                Please keep your device around 20cm from your face during the recording and perform the data recording in a quiet environment.</p>
+                Please keep your device around 20 cm from your face during the recording and perform the recording in a quiet environment.</p>
             <span *ngIf="disableMetaData && !finishedMetaData">By clicking start you will proceed to data and stimuli collection, accepting our
             </span><span *ngIf="!disableMetaData || finishedMetaData">You have accepted our </span>
             <a href="https://coswara.iisc.ac.in/terms" target="_blank">terms and conditions</a>.
