--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,1 +1,21 @@
-<p>team works!</p>
+<div class="component-container">
+    <h4>Meet the Team</h4>
+    <div class="mentors">
+        <div class="people-set" fxLayout="row wrap" fxLayoutAlign="center center">
+            <div class="people" *ngFor="let mentor of mentorsList" fxLayout="column" fxLayoutAlign="center center">
+                <div class="image" [ngStyle]="{'background-image': 'url(\'../../../assets/team/default.jpeg\')'}"></div>
+                <h5 class="name">{{mentor.name}}</h5>
+                <div class="designation">{{mentor.designation}}</div>
+                <div class="institution">{{mentor.institution}}</div>
+            </div>
+        </div>
+    </div>
+    <div class="people-set" fxLayout="row wrap" fxLayoutAlign="center center">
+        <div class="people" *ngFor="let people of peopleList" fxLayout="column" fxLayoutAlign="center center" fxFlex="33" fxFlex.xs="100">
+            <div class="image" [ngStyle]="{'background-image': 'url(\'../../../assets/team/default.jpeg\')'}"></div>
+            <h5 class="name">{{people.name}}</h5>
+            <div class="designation">{{people.designation}}</div>
+            <div class="institution">{{people.institution}}</div>
+        </div>
+    </div>
+</div>
