--- a/src/styles.less
+++ b/src/styles.less
@@ -58,6 +58,9 @@ h5 { font-size: 18px!important; }
 h6 { font-size: 12px!important; }
 
 @media(max-width: 768px) {
+  h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 10px;
+  }
   h1 {
     font-size: 48px!important;
     margin-bottom: 15px;
@@ -97,6 +100,7 @@ a:hover {
 .component-container {
   padding: 0 15%;
   font-size: @text_normal_size;
+  min-height: 100%;
 }
 .content-container, .nav-container {
   padding: 10px;
