[base] Some changes in about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -35,8 +35,8 @@
     </div> -->
     <div class="home-footer" fxLayout="row wrap" fxLayout.xs="column">
         <!-- <a class="button button-dark" href="https://record.coswara.iisc.ac.in" target="_blank">PROCEED TO COLLECTION PAGE</a> -->
-        <a class="button" [routerLink]="'/team'">MEET THE TEAM</a>
-        <a class="button" [routerLink]="'/home'">BACK</a>
+        <a class="button button-dark" [routerLink]="'/team'">MEET THE TEAM</a>
+        <a class="button" [routerLink]="'/home'">HOME</a>
     </div>
         <!-- <p>Project Coswara aims at designing point-of-care diagnosis for respiratory infections.
             The focus is on making the diagnosis in seconds, without having to walk to the clinic, and inexpensive.
