--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,6 @@
-<p>contact works!</p>
+<div class="component-container">
+    <h3 class="page-title">contact us</h3>
+    <div class="content">
+        For any queries, please write to <a href="mailto:sriramg@iisc.ac.in">sriramg@iisc.ac.in</a>
+    </div>
+</div>
