--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="component-container">
-    <h2>Project Coswara</h2>
+    <h2 class="page-title">Project Coswara</h2>
     <div class="content">
         <p>Project Coswara by <a href="https://www.iisc.ac.in" target="_blank">Indian Institute of Science (IISc) Bangalore</a> is an attempt to build a diagnostic tool for Covid-19 based on respiratory, cough and speech sounds.
             The project is in the data collection stage now. It requires the participants to provide a recording of breathing sounds, cough sounds, sustained phonation of vowel sounds and a counting exercise which takes around 5-7 minutes of your time.
