--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,5 +1,5 @@
 <div class="component-container">
-    <h4>Meet the Team</h4>
+    <h3 class="page-title">meet the team</h3>
     <div class="mentors">
         <div class="people-set" fxLayout="row wrap" fxLayoutAlign="center center">
             <div class="people" *ngFor="let mentor of mentorsList" fxLayout="column" fxLayoutAlign="center center">
