--- a/src/app/team/team.component.less
+++ b/src/app/team/team.component.less
@@ -9,7 +9,7 @@
   margin-bottom: 10px;
 }
 .mentors .people {
-  margin: 0 10px 10px;
+  margin: 0 20px 10px;
 }
 .people .image {
   background-size: 150px;
@@ -28,4 +28,11 @@
 }
 .people .institution {
   font-size: @text_smaller_size;
+}
+
+@media(max-width: 768px) {
+  .mentors {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+  }
 }
