--- a/src/styles.less
+++ b/src/styles.less
@@ -18,7 +18,8 @@
 @color_dark_border: #cccccc;
 @color_link: #777777;
 @color_light: #999999;
-@color_very_light: #eeeeee;
+@color_lighter: #eeeeee;
+@color_lightest: #f9f9f9;
 @color_light_border: #f3f3f3;
 
 @light_border_line: 1px solid @color_light_border;
@@ -47,6 +48,9 @@ html, body {
 h1, h2, h3, h4, h5, h6, .button, .button-dark {
   font-family: 'Quicksand', sans-serif!important;
 }
+h1, h2, h3, h4, h5, h6 {
+  margin: 10px 0 10px;
+}
 h1 {
   font-size: 64px!important;
   margin-bottom: 20px;
@@ -59,7 +63,7 @@ h6 { font-size: 12px!important; }
 
 @media(max-width: 768px) {
   h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 10px;
+    margin: 10px 0 15px;
   }
   h1 {
     font-size: 48px!important;
@@ -102,19 +106,23 @@ a:hover {
   font-size: @text_normal_size;
   min-height: 100%;
 }
-.content-container, .nav-container {
+.content-container {
   padding: 10px;
 }
 .footer-container {
   border-top: @border_line;
 }
 .nav-container {
+  padding: 10px 20px;
   border-bottom: @border_line;
 }
 
 @media(max-width: 768px) {
   .component-container {
-    padding: 0;
+    padding: 5px;
+  }
+  .nav-container {
+    padding: 15px;
   }
 }
 /* Container class ends */
@@ -147,10 +155,17 @@ a:hover {
 }
 .button.button-dark {
   background-color: @color_dark;
-  color: @color_very_light;
+  color: @color_lighter;
 }
 .button.disabled { cursor: default; opacity: 0.6; }
+.page-title { margin: 20px 0 25px; }
+.sub-title { margin: 10px 0 15px; }
 .small-text { font-size: @text_small_size; }
 .smaller-text { font-size: @text_smaller_size; }
 .full-width { width: 100%; }
+
+@media(max-width: 768px) {
+  .page-title { margin: 10px 0 15px; }
+  .sub-title { margin: 5px 0 10px; }
+}
 /* General classes ends*/
