[base] Fix about page

--- a/src/styles.less
+++ b/src/styles.less
@@ -58,8 +58,8 @@ h1 {
 h2 { font-size: 48px!important; }
 h3 { font-size: 32px!important; }
 h4 { font-size: 24px!important; }
-h5 { font-size: 18px!important; }
-h6 { font-size: 12px!important; }
+h5 { font-size: 20px!important; }
+h6 { font-size: 16px!important; }
 
 @media(max-width: 768px) {
   h1, h2, h3, h4, h5, h6 {
@@ -72,8 +72,8 @@ h6 { font-size: 12px!important; }
   h2 { font-size: 32px!important; }
   h3 { font-size: 24px!important; }
   h4 { font-size: 18px!important; }
-  h5 { font-size: 16px!important; }
-  h6 { font-size: 12px!important; }
+  h5 { font-size: 18px!important; }
+  h6 { font-size: 16px!important; }
 }
 
 *:not(.mat-icon) {
@@ -86,6 +86,10 @@ a {
 }
 a:hover {
   color: @color_dark;
+}
+p {
+  text-indent: 30px;
+  text-align: justify;
 }
 /* Heading ends */
 
