--- a/projects/collect/src/app/details/details.component.less
+++ b/projects/collect/src/app/details/details.component.less
@@ -10,6 +10,7 @@
   padding-top: 10px;
   margin-top: 30px;
 }
+p { text-indent: 0; }
 
 @media(min-width: 768px) {
   .lang .tab-check-box { padding: 0; }
