[base, collect] Final changes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="component-container">
     <h3 class="page-title">about the project</h3>
     <div class="content">
-        <p>
+        <p class="no-indent">
             The word <b>Coswara</b> is  an amalgamation of Co (from corona) and Swara (sound in sanskrit). The project is being pursued in three stages:
         </p>
         <h5 class="sub-title">Data Collection</h5>
@@ -26,6 +26,10 @@
         <p>
             We aim to release the diagnosis tool as a web/mobile application. Similar to the dataset creation stage, the application requests for recording the voice samples, and preferably provides a score indicating the probability of COVID-19 infection.
             The final deployment of the tool is subject to validation with clinical findings, and authorization/approval from competent authorities.
+        </p>
+        <p>
+            Given the highly simplistic and cost effective nature of this diagnosis approach, we hypothesize that even a partial success of the tool would enable a massive deployment as a first line of diagnosis for the pandemic.
+            The potential diagnostic tool will not replace chemical testing but merely supplement the existing testing methods.
         </p>
     </div>
 </div>
