--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,15 +3,12 @@
     <div class="content">
         <p>Project Coswara by <a href="https://www.iisc.ac.in" target="_blank">Indian Institute of Science (IISc) Bangalore</a> is an attempt to build a diagnostic tool for Covid-19 based on respiratory, cough and speech sounds.
             The project is in the data collection stage now. It requires the participants to provide a recording of breathing sounds, cough sounds, sustained phonation of vowel sounds and a counting exercise which takes around 5-7 minutes of your time.
-            No personal identifiable data is collected from the participants.
-        </p>
-        <p>Given the highly simplistic and cost effective nature of this diagnosis approach, we hypothesize that even a partial success of the tool would enable a massive deployment as a first line of diagnosis for the pandemic.
-
+            No personally identifiable data is collected from the participants.
         </p>
     </div>
 
     <div class="home-footer" fxLayout="row wrap" fxLayout.xs="column">
-        <a class="button button-dark" href="https://record.coswara.iisc.ac.in" target="_blank">PROCEED TO COLLECTION PAGE</a>
+        <a class="button button-dark" href="https://record.coswara.iisc.ac.in">PROCEED TO DATA RECORDING</a>
         <a class="button" [routerLink]="'/about'">READ MORE</a>
     </div>
 </div>
