--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -1,10 +1,13 @@
 <div class="component-container">
     <h3 class="title">terms and conditions</h3>
     <div class="content">
-        <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software, data and associated documentation files (the "Software") and data collected (the "Data"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
+        <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software, data and associated documentation files (the "Software") and data collected (the "Data"), to deal in the Software and Data without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense copies of the Software and Data, and to permit persons to whom the Software and Data is furnished to do so, subject to the following conditions:</p>
 
-        <p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
+        <p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software and Data.</p>
 
-        <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
+        <p>THE SOFTWARE AND DATA IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR PARTICIPANTS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE AND DATA OR THE USE OR OTHER DEALINGS IN THE SOFTWARE AND THE DATA.</p>
+    </div>
+    <div class="terms-footer" fxLayout="row wrap" fxLayout.xs="column">
+        <a class="button button-dark" href="https://record.coswara.iisc.ac.in">PROCEED TO DATA RECORDING</a>
     </div>
 </div>
