--- a/src/styles.less
+++ b/src/styles.less
@@ -162,6 +162,7 @@ p {
   color: @color_lighter;
 }
 .button.disabled { cursor: default; opacity: 0.6; }
+.no-indent { text-indent: 0; }
 .page-title { margin: 20px 0 25px; }
 .sub-title { margin: 10px 0 15px; }
 .small-text { font-size: @text_small_size; }
