--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -2,17 +2,14 @@
     <h4 *ngIf="!finishedMetaData">We need some information to continue!</h4>
     <mat-tab-group [dynamicHeight]="true" [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndex = $event">
         <mat-tab [disabled]="submitLoader" label="Disclaimer">
-            <p>Project Coswara aims at data collection and diagnostic tools using speech and breathing sounds for healthy subjects and patients with respiratory diseases.
-            This study builds on other previous studies which have reported a high level of sensitivity for identifying respiratory illness from the human voice.
+            <p>This study builds on other previous studies which have reported a high level of sensitivity for identifying respiratory illness from the human voice.
             Any tools with statistical significance in disease detection will also be implemented as part of this app at a later date.
-            </p>
-            <p>The project is planned for submission to ICMR (Indian council of Medical Research) for approval.
-            The app will ask for some health details as well as some speech and breathing sounds from the user.
-            The data collected will be used for research purposes and will be shared with the research community for developing quick tools for Covid diagnostics.
             The participation in this study is purely voluntary and the details collected will not contain any personally identifiable information.
             </p>
             <p>The entire recording and data collection should take about 5 minutes only.
-                Please keep your device around 20 cm from your face during the recording and perform the recording in a quiet environment.</p>
+               Please keep your device around 20 cm from your face during the recording and perform the recording in a quiet environment.
+               The recording device should not be shared with others before cleaning/sanitation.
+            </p>
             <span *ngIf="disableMetaData && !finishedMetaData">By clicking start you will proceed to data and stimuli collection, accepting our
             </span><span *ngIf="!disableMetaData || finishedMetaData">You have accepted our </span>
             <a href="https://coswara.iisc.ac.in/terms" target="_blank">terms and conditions</a>.
