[base] Some changes
(cherry picked from commit da7b835e7d747a9a289bc82ca22efa7fb3cc4c12)

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,7 +11,7 @@
         </p>
         <p>
             No personally identifiable information is collected, and the data collection respects the privacy of the contributors.
-            The data is also anonymized during storage itself.
+            The data is also anonymized during storage itself. All the collected data will be available updated <a href="https://github.com/iiscleap/Coswara-Data">here</a> on a daily basis.
         </p>
         <h5 class="sub-title">Modeling</h5>
         <p>
