[base] Some fixes and updates

--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -1,7 +1,9 @@
 <div class="component-container" fxLayout="column" fxLayoutAlign="start start" fxFill>
     <h4>Thank you for your participation!</h4>
     <div class="content">
-        Thank you for being a part of this! Please share it among your friends and relatives.
+        Thank you for being a part of this!
+        Please share it among your friends and relatives.
+        Follow us at <a href="https://www.facebook.com/coswara.iisc">Facebook</a> and <a href="https://twitter.com/coswara_iisc">Twitter</a> to get the latest updates.
     </div>
     <div class="thank-you-footer">
         <div class="button" (click)="startSession()">START A NEW SESSION</div>
