--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <cs-content fxLayout="column" fxFlex>
         <router-outlet></router-outlet>
     </cs-content>
+    <cs-footer></cs-footer>
 </div>
 <div *ngIf="appLoader" class="content-container" fxLayout="column" fxLayoutAlign="center center" fxFill>
     <mat-progress-spinner [diameter]="80" mode="indeterminate"></mat-progress-spinner>
