[base] Fixed font issue

--- a/src/styles.less
+++ b/src/styles.less
@@ -76,7 +76,7 @@ h6 { font-size: 16px!important; }
   h6 { font-size: 16px!important; }
 }
 
-*:not(.mat-icon, .fa) {
+*:not(.mat-icon):not(.fa) {
   font-family: 'Open Sans', sans-serif;
 }
 
