[base] Fixed footer icons
(cherry picked from commit c6377e4ee98f0579ccd8751d8fbfed86ad92ac75)

--- a/src/app/footer/footer.component.less
+++ b/src/app/footer/footer.component.less
@@ -1,5 +1,10 @@
 @import '../../styles.less';
 
+.fa {
+  font-size: @text_bigger_size;
+  margin: 0 10px;
+}
+
 .footer-container .main {
   padding: 15px;
 }
