--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,17 +1,7 @@
 <div class="footer-container" fxLayout="column">
    <div class="main" fxLayout="row" fxLayoutAlign="center center">
-       <a href="https://fb.com/coswara.iisc"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+       <a href="https://fb.com/coswara.iisc"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
        <a href="https://twitter.com/coswara_iisc"><i class="fa fa-twitter" aria-hidden="true"></i></a>
        <a href="https://github.com/iiscleap/Coswara-Data"><i class="fa fa-github" aria-hidden="true"></i></a>
-<!--        <a href="http://covid-speech.web.app/disclaimer">code</a>-->
-<!--        <a href="http://covid-speech.web.app/about">about</a>-->
-<!--        <a href="http://covid-speech.web.app/get-in-touch">contact</a>-->
-<!--        <a href="http://covid-speech.web.app/disclaimer">disclaimer</a>-->
-<!--    </div>-->
-    <div class="bottom" fxLayout="row" fxLayoutAlign="center center">
-<!--        <h5>made with <h5 class="heart">&hearts;</h5> in india</h5>-->
-        <!-- <h5>made in india</h5> -->
-        <!-- <a href="www.fb.com/coswara.iisc"> <i class="icon-facebook fa-4x"></i></a> -->
-        
-    </div>
+   </div>
 </div>
