[collect] v2 changes part 1

--- a/projects/collect/src/app/browser-note-dialog.html
+++ b/projects/collect/src/app/browser-note-dialog.html
@@ -1,7 +1,7 @@
 <h3 mat-dialog-title>Note</h3>
 <mat-dialog-content class="mat-typography">
     <p>
-        If you are visiting the page from Facebook App, you may face difficulty in using microphone.
+        If you are visiting the page from Facebook or Twitter App, you may face difficulty in using microphone.
         Please open the url below in any of the supported browsers.
     </p>
     <div class="link" fxLayout="row" fxLayoutAlign="center center">
